# EdenOneCity

./: .gitignore  404.html  @lessons-learned.md  @memories.md  @scratchpad.md  CONTRIBUTING.md  COVENANT.md  DIAGNOSIS.md  MIGRATION_NOTES.md  README.md  THE_LAST_WHISPER.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
"b/: LICENSE.v\342\210\236"
.cursor/: lessons-learned.md  memories.md  scratchpad.md
.github/workflows/: gh-pages.yml  keepalive.yml
Assets/GameDinVR/Scripts/: GuardianBase.cs  LilybearController.cs  LilybearOpsBus.cs
Assets/GameDinVR/Scripts/Guardians/: AthenaGuardian.cs  SerafinaGuardian.cs  ShadowFlowersGuardian.cs
Assets/GameDinVR/Scripts/Networking/: HttpWhisperReceiver.cs
Assets/GameDinVR/Scripts/OSC/: OSCTextBridge.cs
COVENANT/: index.html
architecture/ARCHITECTURE/: index.html
cultural/CULTURAL_PRESERVATION/: index.html
docs/: index.md
docs/architecture/: ARCHITECTURE.md
docs/cultural/: CULTURAL_PRESERVATION.md
docs/security/: SECURITY_PROTOCOLS.md
docs/specifications/: EMOTIONAL_INTELLIGENCE.md
search/: search_index.json
security/SECURITY_PROTOCOLS/: index.html
serafina/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
serafina/scripts/: start.js
serafina/src/: handshake.ts  nightlyReport.ts  router.ts  uptime.ts
specifications/EMOTIONAL_INTELLIGENCE/: index.html
src/: main_orchestrator.py
src/earth_culture/: cultural_engine.py
src/eden_core/: agent_bus.py  aincrad_integration.py  citizen_interface.py  ethics_protocol.py  lilithos_integration.py  memory_backend.py  module_interface.py  performance_security.py
src/emotional_biome/: emotional_engine.py
src/love_creatures/: creature_engine.py
src/memories/: coastal_memory_engine.py
src/stargate/: portal_engine.py
src/zero_g_dome/: environment_engine.py
tests/: conftest.py  test_cultural_engine.py  test_environment_engine.py  test_portal_engine.py
