[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
  | docs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # Pyupgrade
    "UP",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-print
    "T20",
    # flake8-simplify
    "SIM",
    # flake8-import-conventions
    "ICN",
    # flake8-annotations
    "ANN",
    # flake8-pytest-style
    "PT",
    # flake8-datetimez
    "DTZ",
]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "D",       # pydocstyle - we'll handle this separately
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py", "**/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[project]
name = "eden-one-city"
version = "0.1.0"
description = "Quantum Modular Smart City Framework"
authors = [
    { name = "Solar Khan", email = "solar@example.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "tensorflow>=2.8.0",
    "torch>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mypy>=1.0.0",
    "types-requests",
]

docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
